# S7-case

./: README.MD  README.md  bot.py  mesages  messages.py  pyproject.toml
analysis/training_history/: training_history.jsonl
api/: main.py  req.py
data/: data3.json  data_flies_emergencies.json  data_noise_balanced.csv  dates.json  international_data.csv  output.txt  passports.json  passports_regions_data.csv  s7_dataset.parquet
data/initial_data/: autodata.json  autodata4_nofaulty.json  autodata5_nofaulty.json  categorized.json  composit1.json  composit2.json  data.csv  passports.json
data/json_format/: processed_data.json  train_data.json  train_nofaulty.json  val_data.json  val_nofaulty.json
data/spacy_format/: dev.spacy  train.spacy
dev/: chains.py  config (3).cfg  data_builder.py  loc_generators.py  parse.py  reader.py  statics.py  trainer.py
models/: config.cfg
models/model-best/: config.cfg  meta.json
models/model-best/ner/: model  moves
models/model-best/vocab/: strings.json
models/model-last/: meta.json
models/model-last/ner/: model  moves
models/model-last/vocab/: strings.json
models/ru_date_time/model-best/: config.cfg  meta.json
models/ru_date_time/model-best/spancat/: cfg  model
scripts/: bot.py  converter.py  create_config.py  data_builder.py  dataset.py  get_airports.py  get_datetime.py  get_docs.py  loc_generators.py  main.py  parse.py  reader.py  screen_interractions.py  statics.py  test.py  test_class.py  test_issues.py  tester.py  train_model.py  trainer.py  visualizer.py
scripts/config/: config.cfg
(+2 files in other folders)
