[project]
name = "s7ner-revised"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=38.2.0",
    "faker-airtravel>=0.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyautogui>=0.9.54",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "spacy-transformers>=1.3.9",
    "telebot>=0.0.5",
    "textnoisr>=1.1.3",
]
